Minor fix to alignment of Zendesk logo for phones

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -25,7 +25,7 @@
             margin-left: 0.8rem;
             position: relative;
 
-            @media #{$media-size-phone} {
+            @media #{$media-size-phone-med} {
                 margin-left: 0;
              }
         }
